--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 			<nav>
 				<div class="container">
 					<div class="row">
-						<div class="logo col-md-4">
+						<div class="logo col-md-4 col-sm-4">
 							<img src="img/logo.png">
 						</div>
-						<div class="menu col-md-8">
+						<div class="menu col-md-8 col-sm-8">
 							<ul>
 								<li><a href="#">Sobre Nós</a></li>
 								<li><a href="#">Conheça Nossa Equipe</a></li>
